# CUDAFusion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: boxing.yaml  params.yaml  upperbody.yaml
docs/: dynamicfusion_cuda_readiness.md
include/: depth_sequence.h  dynamic_fusion.h  fusion_app.h  fusion_debug.h  fusion_math.h  mesh_raster_kernels.h  se3_math.cuh  skinning_kernels.h  solver.h  tsdf_kernels.h  tsdf_volume.h  types.h  warp_field.h  yaml_helper.h
kernels/: solver_kernels.cu  tsdf_kernels.cu
src/: dynamic_fusion.cu  marching_cubes.cu  mesh_raster_kernels.cu  skinning_kernels.cu  tsdf_volume.cu  warp_field.cu
tests/: README_TESTS.md  main.cu  test_mesh_extraction.cu  test_pose_estimation.cu  test_tsdf_integration.cu  test_warp_field.cu
